# stratus-ai

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  MEDIUM_ARTICLE.md  README.md  SECURITY.md  deploy.sh  deploy_wizard.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  start.sh  wizard.sh
.github/workflows/: ci.yml  kali-status.yml
assessment/: cli.py  config.py  models.py  runner.py
assessment/ai/: analyzer.py  client.py  llm_client.py  preprocessor.py  prompts.py
assessment/reports/: html.py  markdown.py
assessment/scanners/: __init__.py  base.py
assessment/scanners/aws/: __init__.py  cloudtrail.py  ec2.py  eks.py  iam.py  kms.py  lambda_scan.py  rds.py  s3.py  secrets_manager.py
assessment/scanners/azure/: __init__.py
assessment/scanners/gcp/: __init__.py  cloudfunctions.py  cloudrun.py  compute.py  iam.py  logging_scan.py  secretmanager.py  session.py  storage.py
debian/: .gitignore  changelog  control  copyright  stratus-ai.1  stratus-ai.manpages  watch
debian/tests/: control
docs/: kali-new-tool-request.md  kali-status-notifications.md
scripts/: check_kali_status.py  send_status_email.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/examples/minimal/: main.tf
terraform/examples/scheduled/: main.tf
terraform/gcp/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
tests/: conftest.py  test_aws_scanners.py  test_cost.py  test_models.py  test_port_scanner.py  test_preprocessor.py  test_reports.py
(+15 files in other folders)
